Bug 1086683 - We need to take into account the resolution when comparing the size of a frame and it's associated widget. r=botond, a=lsblakk

The size of the frame is scaled by the local resolution of it's presshell. The widget contains the document, so it's size is scaled the parent presshell resolution, but not the local presshell resolution. So comparing the widget size and the frame size directly without taking into account resolution is wrong.